[gd_scene load_steps=39 format=3 uid="uid://blm4oq36fxt8k"]

[ext_resource type="Script" uid="uid://beyol6mhmifcy" path="res://JUEGO/MyAssets/Personajes/Hongo/hongo.gd" id="1_dh1e2"]
[ext_resource type="Texture2D" uid="uid://dl0ryxclcl172" path="res://JUEGO/MyAssets/Personajes/Hongo/Attack.png" id="2_oom8e"]
[ext_resource type="Texture2D" uid="uid://ca1sw5qa1ty6b" path="res://JUEGO/MyAssets/Personajes/Hongo/Run.png" id="3_xk2ws"]
[ext_resource type="Texture2D" uid="uid://dyfy4mwi2ni3c" path="res://JUEGO/MyAssets/Personajes/Hongo/Idle.png" id="4_vuhcc"]
[ext_resource type="Texture2D" uid="uid://c4otinb86ag84" path="res://JUEGO/MyAssets/Personajes/Hongo/Death.png" id="5_tatfs"]
[ext_resource type="Texture2D" uid="uid://c8sbio2i84ymt" path="res://JUEGO/MyAssets/Personajes/Hongo/Take Hit.png" id="6_mjsik"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bbsqu"]
atlas = ExtResource("2_oom8e")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw8wv"]
atlas = ExtResource("2_oom8e")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_komv7"]
atlas = ExtResource("2_oom8e")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gn6l"]
atlas = ExtResource("2_oom8e")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1i35"]
atlas = ExtResource("2_oom8e")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmf50"]
atlas = ExtResource("2_oom8e")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_11lpq"]
atlas = ExtResource("2_oom8e")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_68a2c"]
atlas = ExtResource("2_oom8e")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdomv"]
atlas = ExtResource("3_xk2ws")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq2nm"]
atlas = ExtResource("3_xk2ws")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_is5uj"]
atlas = ExtResource("3_xk2ws")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qat8"]
atlas = ExtResource("3_xk2ws")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_13tmc"]
atlas = ExtResource("3_xk2ws")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhdyp"]
atlas = ExtResource("3_xk2ws")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5jah"]
atlas = ExtResource("3_xk2ws")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7xpa"]
atlas = ExtResource("3_xk2ws")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuol8"]
atlas = ExtResource("4_vuhcc")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw8oy"]
atlas = ExtResource("4_vuhcc")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_87l72"]
atlas = ExtResource("4_vuhcc")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0pmq"]
atlas = ExtResource("4_vuhcc")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn421"]
atlas = ExtResource("5_tatfs")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6x7l"]
atlas = ExtResource("5_tatfs")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldyg3"]
atlas = ExtResource("5_tatfs")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c7kp"]
atlas = ExtResource("5_tatfs")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4s0mm"]
atlas = ExtResource("6_mjsik")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tj34"]
atlas = ExtResource("6_mjsik")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxm14"]
atlas = ExtResource("6_mjsik")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdu7l"]
atlas = ExtResource("6_mjsik")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_md0t1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbsqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw8wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_komv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gn6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1i35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmf50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11lpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68a2c")
}],
"loop": true,
"name": &"ataque",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdomv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq2nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is5uj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qat8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13tmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhdyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5jah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7xpa")
}],
"loop": true,
"name": &"caminar",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuol8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw8oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87l72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0pmq")
}],
"loop": true,
"name": &"existe",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn421")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6x7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldyg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c7kp")
}],
"loop": true,
"name": &"muerte",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s0mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tj34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxm14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdu7l")
}],
"loop": true,
"name": &"recibe_golpe",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kbt3g"]
height = 52.0

[sub_resource type="CircleShape2D" id="CircleShape2D_22te4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ne4l"]
radius = 13.4164

[node name="Hongo" type="CharacterBody2D"]
up_direction = Vector2(0.707107, -0.707107)
script = ExtResource("1_dh1e2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_md0t1")
animation = &"recibe_golpe"
frame_progress = 0.906476
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 14)
shape = SubResource("CapsuleShape2D_kbt3g")

[node name="DireccionTimer" type="Timer" parent="."]
autostart = true

[node name="hongoHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hongoHitbox"]
position = Vector2(-1, 11)
shape = SubResource("CircleShape2D_22te4")

[node name="hongoDealDamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hongoDealDamageArea"]
position = Vector2(-1, 11)
shape = SubResource("CircleShape2D_5ne4l")

[connection signal="timeout" from="DireccionTimer" to="." method="_on_direccion_timer_timeout"]
[connection signal="area_entered" from="hongoHitbox" to="." method="_on_hongo_hitbox_area_entered"]
[connection signal="area_entered" from="hongoDealDamageArea" to="." method="_on_hongo_deal_damage_area_area_entered"]
